--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "algoliasearch>=4.35.0",
     "beautifulsoup4>=4.14.3",
+    "psycopg2>=2.9.11",
     "pylint>=4.0.4",
     "requests>=2.32.5",
     "requests-unixsocket>=0.4.1",
