Add Pydantic settings and Loguru logging
- Add pydantic-settings for centralized configuration management
- Add loguru for structured logging with module and line numbers
- Replace hardcoded constants with environment-based settings
- Fix all imports to use absolute paths
- Add .env.example template and remove .env.local from tracking
- Configure docker-compose to auto-run base_schema.sql on init
- Support ENV_FILE variable for flexible environment selection

--- a/src/azure/docker-compose.yml
+++ b/src/azure/docker-compose.yml
@@ -4,10 +4,11 @@ services:
     container_name: azure-db
     volumes:
       - azure:/var/lib/postgresql/data/
+      - ./base_schema.sql:/docker-entrypoint-initdb.d/01-base_schema.sql:ro
     ports:
-      - "5432:5432"
+      - "5999:5432"
     env_file:
-      - ./.env.local
+      - ${ENV_FILE:-.env.local}
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U root -d azure"]
