--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ requires-python = ">=3.14"
 dependencies = [
     "algoliasearch>=4.35.0",
     "beautifulsoup4>=4.14.3",
+    "loguru>=0.7.3",
     "psycopg2>=2.9.11",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
     "pylint>=4.0.4",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
