--- a/src/azure/.env.example
+++ b/src/azure/.env.example
@@ -7,7 +7,7 @@ LOG_LEVEL=INFO
 DB_HOST=localhost
 DB_NAME=azure
 DB_PORT=5432
-DB_USERNAME=your_username
+DB_USERNAME=root
 DB_PASSWORD=your_password
 
 # For local development when we spin up a fresh postgres container
