--- a/src/azure/.env.example
+++ b/src/azure/.env.example
@@ -12,7 +12,7 @@ DB_PASSWORD=your_password
 
 # For local development when we spin up a fresh postgres container
 POSTGRES_DB=azure
-POSTGRES_USER=your_username
+POSTGRES_USER=root
 POSTGRES_PASSWORD=your_password
 
 # Azure API
