--- a/src/azure/.env.example
+++ b/src/azure/.env.example
@@ -16,7 +16,7 @@ POSTGRES_USER=root
 POSTGRES_PASSWORD=your_password
 
 # Azure API
-APP_ID=your_app_id
+APP_ID=J8N8I8KE2Y
 API_KEY=your_api_key
 
 # Top Level Categories
