--- a/src/azure/.env.example
+++ b/src/azure/.env.example
@@ -17,7 +17,7 @@ POSTGRES_PASSWORD=your_password
 
 # Azure API
 APP_ID=J8N8I8KE2Y
-API_KEY=your_api_key
+API_KEY=2982ea7ae8fdc7ed1772c496260d35f5
 
 # Top Level Categories
 TOP_LEVEL_CATEGORIES={"Household & Family": 21924, "Food": 21244, "Health & Beauty": 19457, "Outdoor & Garden": 19159, "Nutritional Supplements": 17257}
