--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,4 +18,4 @@ jobs:
         run: uv python install
 
       - name: Analysing the code with pylint
-        run: uv run pylint
+        run: uv run pylint .
