--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "algoliasearch>=4.35.0",
     "beautifulsoup4>=4.14.3",
     "loguru>=0.7.3",
-    "psycopg2>=2.9.11",
+    "psycopg>=3.3.2",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "pylint>=4.0.4",
