Start adding shopify integration

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ API_KEY=2982ea7ae8fdc7ed1772c496260d35f5
 
 # Top Level Categories
 TOP_LEVEL_CATEGORIES={"Household & Family": 21924, "Food": 21244, "Health & Beauty": 19457, "Outdoor & Garden": 19159, "Nutritional Supplements": 17257}
+
+# Shopify
+SHOPIFY_CLIENT_ID=
+SHOPIFY_CLIENT_SECRET=
